--- a/tarefa-intro-python-2.ipynb
+++ b/tarefa-intro-python-2.ipynb
@@ -1405,7 +1405,9 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "media = "
+   ]
   },
   {
    "cell_type": "markdown",
