calculamos o desvio padrao

--- a/tarefa-intro-python-2.ipynb
+++ b/tarefa-intro-python-2.ipynb
@@ -1433,8 +1433,13 @@
     "media = soma/N\n",
     "print(media)\n",
     "\n",
-    "\n",
-    "\n"
+    "# Calculando o desvio padrão, usamos a mesma ideia \n",
+    "temp = 0\n",
+    "for temperatura in dados:\n",
+    "    temp = temp + (temperatura - media)**2 \n",
+    "divisao = temp/N\n",
+    "desvio_padrao = divisao**(1/2)\n",
+    "print(desvio_padrao)\n"
    ]
   },
   {
