--- a/tarefa-intro-python-2.ipynb
+++ b/tarefa-intro-python-2.ipynb
@@ -1511,12 +1511,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.9814558\n",
+      "-0.59659114\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Definimos \"maximo\" como o primeiro valor da lista \"dados\" \n",
+    "maximo = dados[0]\n",
+    "#Se maximo for menor do que o valor de temp na lista, ele assume o valor deste, até que no final a variável \"maximo\" terá o maior valor da lista\n",
+    "for temp in dados:\n",
+    "    if maximo < temp:\n",
+    "        maximo = temp\n",
+    "print(maximo)\n",
+    "\n",
+    "#Mesma logica do comando de cima, trocando apenas o sinal no if. Se minimo for maior que temp, este assumirá seu valor.\n",
+    "minimo = dados[0]\n",
+    "for temp in dados:\n",
+    "    if minimo > temp:\n",
+    "        minimo = temp\n",
+    "print(minimo)"
+   ]
   },
   {
    "cell_type": "markdown",
