--- a/tarefa-intro-python-2.ipynb
+++ b/tarefa-intro-python-2.ipynb
@@ -1433,7 +1433,7 @@
     "media = soma/N\n",
     "print(media)\n",
     "\n",
-    "# Calculando o desvio padrão, usamos a mesma ideia da media\n",
+    "# Calculando o desvio padrão, usamos a mesma ideia \n",
     "temp = 0\n",
     "for temperatura in dados:\n",
     "    temp = temp + (temperatura - media)**2 \n",
@@ -1511,15 +1511,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 3,
-=======
-<<<<<<< HEAD
-   "execution_count": 3,
-=======
-   "execution_count": 85,
->>>>>>> c7874f39e32d633849a207535daa702c28799ab6
->>>>>>> e6cb03727b14ed50507783e3603faa273167e554
    "metadata": {
     "collapsed": false
    },
@@ -1534,35 +1526,15 @@
     }
    ],
    "source": [
-<<<<<<< HEAD
     "#Definimos \"maximo\" como o primeiro valor da lista \"dados\" \n",
     "maximo = dados[0]\n",
     "#Se maximo for menor do que o valor de temp na lista, ele assume o valor deste, até que no final a variável \"maximo\" terá o maior valor da lista\n",
-=======
-<<<<<<< HEAD
-    "#Definimos \"maximo\" como o primeiro valor da lista \"dados\" \n",
-    "maximo = dados[0]\n",
-    "#Se maximo for menor do que o valor de temp na lista, ele assume o valor deste, até que no final a variável \"maximo\" terá o maior valor da lista\n",
-=======
-    "# Definimos \"maximo\" como o primeiro valor da lista \"dados\"\n",
-    "maximo = dados[0]\n",
-    "# Se maximo for menor que o valor temp na lista, ele assume o valor deste, até que no final a variável \"maximo terá o maior valor da lista\n",
->>>>>>> c7874f39e32d633849a207535daa702c28799ab6
->>>>>>> e6cb03727b14ed50507783e3603faa273167e554
     "for temp in dados:\n",
     "    if maximo < temp:\n",
     "        maximo = temp\n",
     "print(maximo)\n",
     "\n",
-<<<<<<< HEAD
     "#Mesma logica do comando de cima, trocando apenas o sinal no if. Se minimo for maior que temp, este assumirá seu valor.\n",
-=======
-<<<<<<< HEAD
-    "#Mesma logica do comando de cima, trocando apenas o sinal no if. Se minimo for maior que temp, este assumirá seu valor.\n",
-=======
-    "# Mesma lógica do comando anterior, trocando apenas o sinal no if. Se minimo for maior que temp, este assumirá o seu valor.\n",
->>>>>>> c7874f39e32d633849a207535daa702c28799ab6
->>>>>>> e6cb03727b14ed50507783e3603faa273167e554
     "minimo = dados[0]\n",
     "for temp in dados:\n",
     "    if minimo > temp:\n",
@@ -1571,12 +1543,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Resultado esperado\n",
     "\n",
@@ -1586,17 +1554,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 4,
-=======
-   "execution_count": 82,
->>>>>>> e6cb03727b14ed50507783e3603faa273167e554
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-<<<<<<< HEAD
      "ename": "NameError",
      "evalue": "name 'np' is not defined",
      "output_type": "error",
@@ -1605,12 +1568,6 @@
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-4-17fbc2f29fcf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Maximo esta igual?\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmaximo\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdados\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
-=======
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximo esta igual? True\n"
->>>>>>> e6cb03727b14ed50507783e3603faa273167e554
      ]
     }
    ],
@@ -1620,19 +1577,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minimo esta igual? True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Minimo esta igual?\", np.allclose(minimo, min(dados)))"
    ]
